Agregar índice por archivo en el README y mejorar secciones sobre Python, PostgreSQL y workflows