@@ -1,6 +1,6 @@
 # Workflows
 
-## Eliminar un pueto en uso
+## Eliminar un puerto en uso
 
 ### Problema
 El servidor no puede iniciarse porque el puerto ya está en uso.
@@ -35,5 +35,247 @@ taskkill /PID <PID> /F
 Si ese puerto lo usabas para autossh o un túnel SSH, asegúrate de cerrarlo antes de volver a levantarlo de nuevo, ya que podría generar conflictos o quedarse colgado en segundo plano.
 
 **Tags:** #workflow #port #killprocess #linux #macos #windows
+
+---
+
+## Eliminar procesos de java colgados por el IntelliJ
+
+### Problema
+A veces, los procesos de Java pueden quedar colgados y no cerrarse correctamente al detener una aplicación en IntelliJ, lo que puede causar problemas al intentar reiniciar la aplicación.
+
+### Solución
+1. Abre la terminal.
+2. Ejecuta el siguiente comando para encontrar el PID de los procesos de Java en ejecución:
+
+```bash
+jps -l
+```
+
+3. Identifica el PID del proceso que deseas eliminar.
+4. Mata el proceso usando el siguiente comando (reemplaza `<PID>` con el ID del proceso encontrado):
+
+```bash
+killall -9 java
+```
+
+> Esto matará todos los procesos de Java en ejecución, sin importar de que aplicación provengan.
+
+4. Para solo matar los procesos de Java de IntelliJ, puedes usar:
+
+```bash
+ps -ef | grep "idea" | grep java | awk '{print $2}' | xargs kill -9
+```
+
+> Esto detecta solo los procesos de Java que contienen "idea" en su línea de comando, que es típico de los procesos iniciados por IntelliJ.
+
+### Notas
+
+Primero usa `jps -l` para ver los procesos de Java en ejecución y asegurarte de que estás matando el proceso correcto. Si tienes múltiples aplicaciones Java en ejecución, matar todos los procesos puede afectar otras aplicaciones.
+
+**Tags:** #workflow #port #killprocess #linux #macos #java #intellij
+
+---
+
+## Matar procesos de Java colgados en Windows
+
+### Problema
+
+En Windows, los procesos de Java pueden quedar colgados y no cerrarse correctamente al detener una aplicación en IntelliJ, lo que puede causar problemas al intentar reiniciar la aplicación.
+
+### Solución
+
+En Windows, cuando cierras IntelliJ IDEA a veces los procesos de Java (JDK) que ejecutaban tu aplicación o tests se quedan colgados en segundo plano. Para matarlos puedes hacerlo de varias formas:
+
+1. Desde el Administrador de Tareas
+	1.	Presiona Ctrl + Shift + Esc.
+	2.	Ve a la pestaña Detalles.
+	3.	Ordena por Nombre y busca java.exe o javaw.exe.
+	4.	Selecciona todos los que correspondan a tu proyecto → clic derecho → Finalizar tarea.
+
+2. Con línea de comandos (CMD o PowerShell)
+
+Matar todos los procesos de Java:
+
+```powershell
+taskkill /F /IM java.exe /T
+taskkill /F /IM javaw.exe /T
+```
+
+•	/F fuerza el cierre.
+•	/IM indica el nombre de la imagen (ejecutable).
+•	/T mata también los procesos hijos.
+
+Ver primero cuáles están corriendo:
+
+```powershell
+tasklist | findstr java
+```
+
+3. Script rápido (batch)
+
+Crea un archivo kill_java.bat con:
+
+```batch
+@echo off
+echo Cerrando procesos de Java...
+taskkill /F /IM java.exe /T
+taskkill /F /IM javaw.exe /T
+pause
+```
+
+Ejecutas ese .bat cuando quieras limpiar procesos colgados.
+
+4. En PowerShell (más flexible)
+
+Listar los procesos Java:
+
+```powershell
+Get-Process java, javaw
+```
+
+Matarlos todos:
+
+```powershell
+Get-Process java, javaw | Stop-Process -Force
+```
+
+### Notas
+
+Con esto aseguras que no se queden instancias de JDK colgadas después de cerrar IntelliJ.
+
+**Tags:** #workflow #killprocess #windows #java #intellij
+
+---
+
+## Evitar que IntelliJ consuma mucha memoria
+
+### Problema
+
+IntelliJ IDEA puede consumir mucha memoria RAM, lo que puede ralentizar tu computadora, en especial si tienes varios proyectos abiertos o si tu computadora tiene recursos limitados.
+
+### Solución
+
+1. Limitar recursos de la JVM en tus ejecuciones
+
+Cuando corres una app desde IntelliJ, se lanza con parámetros de la JVM.
+Puedes controlar memoria máxima y número de hilos:
+	
+  -	Abre el menú Run → Edit Configurations.
+  -	En tu configuración de ejecución agrega en VM options algo como:
+
+```bash
+-Xmx1024m -Xms512m -XX:CICompilerCount=2
+```
+
+-	-Xmx1024m → máximo 1GB de RAM.
+-	-Xms512m → mínimo 512MB de RAM.
+-	-XX:CICompilerCount=2 → limita compiladores JIT a 2 hilos (evita que use todos los núcleos).
+
+> Así evitas que se coma toda la RAM y CPU.
+
+2. Limitar IntelliJ IDEA en sí
+
+IntelliJ también es pesado y puede disparar el uso de CPU (indexación, análisis, etc.).
+
+-	Edita el archivo de configuración de IntelliJ según tu sistema: 
+-	Windows: idea64.exe.vmoptions (en C:\Program Files\JetBrains\IntelliJ IDEA <version>\bin\)
+-	O desde el menú: Help → Edit Custom VM Options…
+
+Ejemplo de límites razonables:
+
+```
+-Xms512m
+-Xmx2048m
+-XX:MaxPermSize=512m
+-XX:ReservedCodeCacheSize=512m
+```
+
+3. Bajar la prioridad de los procesos Java
+
+Si quieres que Java no bloquee tu PC aunque use CPU:
+
+-	Abre Administrador de tareas → pestaña Detalles.
+-	Clic derecho en java.exe o idea64.exe → Establecer prioridad → ponlo en Baja.
+
+O automático con PowerShell:
+
+```powershell
+Get-Process java | ForEach-Object { $_.PriorityClass = 'BelowNormal' }
+```
+
+### Notas
+
+Esto ayuda a que IntelliJ y tus apps Java no consuman toda la memoria y CPU, manteniendo tu PC más fluida.
+
+**Tags:** #workflow #performance #java #intellij
+
+---
+
+## Convertir svg a jpg sin perder calidad
+
+### Problema
+
+Se busca convertir imágenes SVG a JPG sin perder calidad, para usarlas en presentaciones o documentos que no soportan SVG. Esto podría funcionar para cualquier otro formato de imagen.
+
+### Solución
+
+1. Con ImageMagick (la más flexible)
+
+Si tu fuente es un SVG (vectorial), puedes exportarlo directo en 4K sin perder calidad:
+
+```bash
+magick -density 384 input.svg -resize 3840x2160 -quality 100 output.jpg
+```
+
+-	`-density 384` → aumenta la resolución de renderizado del vector.
+-	`-resize 3840x2160` → fuerza resolución 4K (16:9).
+-	`-quality 100` → máxima calidad de compresión JPG.
+
+> Como el SVG es vectorial, puedes exportarlo incluso en 8K sin pérdida.
+
+Si ya tienes una foto raster (JPG, PNG, etc.), entonces se usa interpolación:
+
+```bash
+magick input.jpg -resize 3840x2160 -quality 100 output_4k.jpg
+```
+
+2. Con Inkscape (para SVG → bitmap 4K o más)
+
+```bash
+# instalar Inkscape (si no lo tienes)
+brew install --cask inkscape  # MacOS con Homebrew
+
+# Exportar SVG a JPG en 4K
+inkscape input.svg --export-type=jpg --export-filename=output.jpg --export-width=3840 --export-height=2160
+```
+
+3. Upscaling con IA (más calidad en fotos raster)
+
+Si las imágenes son fotos y necesitas que de verdad ganen nitidez, puedes usar:
+
+-	waifu2x-caffe (optimizado para fotos e ilustraciones).
+-	Real-ESRGAN (más avanzado, soporta hasta 4K y 8K).
+
+Ejemplo con Real-ESRGAN:
+
+```bash
+# Instalar Real-ESRGAN (requiere tener instalado Homebrew y git)
+brew install real-esrgan
+
+# Usar Real-ESRGAN para mejorar una foto a 4K
+realesrgan-ncnn-vulkan -i input.jpg -o output_4k.jpg -s 4
+```
+
+En resumen:
+
+-	SVG → JPG en 4K → usa magick -density + -resize.
+-	Fotos raster → 4K con interpolación → magick -resize 3840x2160.
+-	Fotos raster → 4K con mejora real → usar IA (Real-ESRGAN).
+
+### Notas
+
+Para fotos, la mejora con IA da mejores resultados que solo interpolar. Para gráficos vectoriales, exportar en alta resolución desde el origen es clave.
+
+**Tags:** #workflow #performance #image-processing #svg #jpg #imagemagick #inkscape #ia
 
 ---
